tests/algorithms/transpiler/Zig/graphs/tarjans_scc.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/tarjans_scc.zig:78:5: error: cannot assign to constant